; ModuleID = '/home/carl/AnghaBench/micropython/ports/unix/extr_input.c_prompt.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/unix/extr_input.c_prompt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@prompt.buf = internal global [256 x i8] zeroinitializer, align 16
@stdout = common dso_local global i32 0, align 4
@stdin = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @prompt(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = load i32, i32* @stdout, align 4
  %9 = call i32 @fputs(i8* %7, i32 %8)
  %10 = load i32, i32* @stdin, align 4
  %11 = call i8* @fgets(i8* getelementptr inbounds ([256 x i8], [256 x i8]* @prompt.buf, i64 0, i64 0), i32 256, i32 %10)
  store i8* %11, i8** %4, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %39

15:                                               ; preds = %1
  %16 = call i32 @strlen(i8* getelementptr inbounds ([256 x i8], [256 x i8]* @prompt.buf, i64 0, i64 0))
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %5, align 4
  %18 = sub nsw i32 %17, 1
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds [256 x i8], [256 x i8]* @prompt.buf, i64 0, i64 %19
  %21 = load i8, i8* %20, align 1
  %22 = sext i8 %21 to i32
  %23 = icmp eq i32 %22, 10
  br i1 %23, label %24, label %29

24:                                               ; preds = %15
  %25 = load i32, i32* %5, align 4
  %26 = sub nsw i32 %25, 1
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds [256 x i8], [256 x i8]* @prompt.buf, i64 0, i64 %27
  store i8 0, i8* %28, align 1
  br label %32

29:                                               ; preds = %15
  %30 = load i32, i32* %5, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %5, align 4
  br label %32

32:                                               ; preds = %29, %24
  %33 = load i32, i32* %5, align 4
  %34 = call i8* @malloc(i32 %33)
  store i8* %34, i8** %6, align 8
  %35 = load i8*, i8** %6, align 8
  %36 = load i32, i32* %5, align 4
  %37 = call i32 @memcpy(i8* %35, i8* getelementptr inbounds ([256 x i8], [256 x i8]* @prompt.buf, i64 0, i64 0), i32 %36)
  %38 = load i8*, i8** %6, align 8
  store i8* %38, i8** %2, align 8
  br label %39

39:                                               ; preds = %32, %14
  %40 = load i8*, i8** %2, align 8
  ret i8* %40
}

declare dso_local i32 @fputs(i8*, i32) #1

declare dso_local i8* @fgets(i8*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
